@@ -46,6 +46,7 @@ nant=net.sourceforge.cruisecontrol.builders.NantBuilder
 labelincrementer=net.sourceforge.cruisecontrol.labelincrementers.DefaultLabelIncrementer
 
 # publishers
+onsuccess=net.sourceforge.cruisecontrol.publishers.OnSuccessPublisher
 artifactspublisher=net.sourceforge.cruisecontrol.publishers.ArtifactsPublisher
 antpublisher=net.sourceforge.cruisecontrol.publishers.AntPublisher
 currentbuildstatuspublisher=net.sourceforge.cruisecontrol.publishers.CurrentBuildStatusPublisher
